--- a/hall-of-fame.html
+++ b/hall-of-fame.html
@@ -104,7 +104,7 @@
 
       <div class="alumni-card priests" data-category="priests">
         <div class="alumni-image">
-          <img src="images/Hall of Fame/Fr Slyvester Achapu.PNG" alt="Rev. Fr. Sylvester Achanyu" onerror="this.src='https://images.unsplash.com/photo-1582750433449-648ed127bb54?auto=format&fit=crop&w=400&q=80'">
+          <img src="images/Hall of Fame/Fr Slyvester Achapu.PNG" alt="Rev. Fr. Sylvester Achapu" onerror="this.src='https://images.unsplash.com/photo-1582750433449-648ed127bb54?auto=format&fit=crop&w=400&q=80'">
           <div class="alumni-overlay">
             <div class="alumni-info">
               <h3>Rev. Fr. Sylvester Achanyu</h3>
