Update website with new pages and images

--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,23 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
   />
-  <style>
+  <!-- Schema.org Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "name": "Photo Gallery - St. Felix Seminary School",
+    "url": "https://stfelixseminary.github.io/gallery.html",
+    "description": "Photo gallery showcasing events, celebrations, and moments from St. Felix Seminary School",
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "St. Felix Seminary School",
+      "url": "https://stfelixseminary.github.io/"
+    }
+  }
+  </script>
+  
+<style>
     /* Gallery Specific Styles */
     .gallery-hero {
       background: linear-gradient(135deg, #002855 0%, #001a33 100%);
@@ -264,27 +280,27 @@
       </div>
       <div class="gallery-grid">
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Bisho Elue Blesses New hostel 1.jpg" alt="Bishop blessing ceremony">
+          <img src="images/Gallary Pictures/Bisho Elue Blesses New hostel 1.jpg" alt="Bishop blessing ceremony" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Bisho Elue Blesses New hostel 2.jpg" alt="Bishop blessing ceremony">
+          <img src="images/Gallary Pictures/Bisho Elue Blesses New hostel 2.jpg" alt="Bishop blessing ceremony" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Bisho Elue Blesses New hostel 3.jpg" alt="Bishop blessing ceremony">
+          <img src="images/Gallary Pictures/Bisho Elue Blesses New hostel 3.jpg" alt="Bishop blessing ceremony" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Bisho Elue Blesses New hostel 4.jpg" alt="Bishop blessing ceremony">
+          <img src="images/Gallary Pictures/Bisho Elue Blesses New hostel 4.jpg" alt="Bishop blessing ceremony" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Bisho Elue Blesses New hostel 5.jpg" alt="Bishop blessing ceremony">
+          <img src="images/Gallary Pictures/Bisho Elue Blesses New hostel 5.jpg" alt="Bishop blessing ceremony" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Bisho Elue Blesses New hostel 6.jpg" alt="Bishop blessing ceremony">
+          <img src="images/Gallary Pictures/Bisho Elue Blesses New hostel 6.jpg" alt="Bishop blessing ceremony" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
       </div>
@@ -313,27 +329,27 @@
       </div>
       <div class="gallery-grid">
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Cultural Day 1.jpg" alt="Cultural performances">
+          <img src="images/Gallary Pictures/Cultural Day 1.jpg" alt="Cultural performances" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Cultural Day 2.jpg" alt="Cultural performances">
+          <img src="images/Gallary Pictures/Cultural Day 2.jpg" alt="Cultural performances" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Cultural Day 3.jpg" alt="Cultural performances">
+          <img src="images/Gallary Pictures/Cultural Day 3.jpg" alt="Cultural performances" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Cultural Day 4.jpg" alt="Cultural performances">
+          <img src="images/Gallary Pictures/Cultural Day 4.jpg" alt="Cultural performances" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Cultural Day 5.jpg" alt="Cultural performances">
+          <img src="images/Gallary Pictures/Cultural Day 5.jpg" alt="Cultural performances" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Cultural Day 6.jpg" alt="Cultural performances">
+          <img src="images/Gallary Pictures/Cultural Day 6.jpg" alt="Cultural performances" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
       </div>
@@ -362,19 +378,19 @@
       </div>
       <div class="gallery-grid">
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Inter-House Sport 1.jpg" alt="Sports competition">
+          <img src="images/Gallary Pictures/Inter-House Sport 1.jpg" alt="Sports competition" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Inter-House Sport 2.jpg" alt="Sports competition">
+          <img src="images/Gallary Pictures/Inter-House Sport 2.jpg" alt="Sports competition" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Inter-House Sport 3.jpg" alt="Sports competition">
+          <img src="images/Gallary Pictures/Inter-House Sport 3.jpg" alt="Sports competition" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Inter-House Sport 4.jpg" alt="Sports competition">
+          <img src="images/Gallary Pictures/Inter-House Sport 4.jpg" alt="Sports competition" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
       </div>
@@ -404,15 +420,15 @@
       </div>
       <div class="gallery-grid">
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Students Investiture 2025 1.jpg" alt="Investiture ceremony">
+          <img src="images/Gallary Pictures/Students Investiture 2025 1.jpg" alt="Investiture ceremony" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Students Investiture 2025 2.jpg" alt="Investiture ceremony">
+          <img src="images/Gallary Pictures/Students Investiture 2025 2.jpg" alt="Investiture ceremony" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Students Investiture 2025 3.jpg" alt="Investiture ceremony">
+          <img src="images/Gallary Pictures/Students Investiture 2025 3.jpg" alt="Investiture ceremony" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
       </div>
@@ -443,19 +459,19 @@
       </div>
       <div class="gallery-grid">
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Old Boys Celebration 1.jpg" alt="Old boys reunion">
+          <img src="images/Gallary Pictures/Old Boys Celebration 1.jpg" alt="Old boys reunion" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Old Boys Celebration 2.jpg" alt="Old boys reunion">
+          <img src="images/Gallary Pictures/Old Boys Celebration 2.jpg" alt="Old boys reunion" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Old Boys Celebration 3.jpg" alt="Old boys reunion">
+          <img src="images/Gallary Pictures/Old Boys Celebration 3.jpg" alt="Old boys reunion" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
         <div class="gallery-item" onclick="openModal(this.querySelector('img').src)">
-          <img src="images/Gallary Pictures/Old Boys Celebration 4.jpg" alt="Old boys reunion">
+          <img src="images/Gallary Pictures/Old Boys Celebration 4.jpg" alt="Old boys reunion" loading="lazy">
           <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
         </div>
       </div>
