--- a/index.html
+++ b/index.html
@@ -21,6 +21,39 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
   />
+  <!-- Schema.org Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "St. Felix Seminary School",
+    "url": "https://stfelixseminary.github.io/",
+    "logo": "https://stfelixseminary.github.io/images/St Felix Logo.png",
+    "description": "St. Felix Seminary School in Ejeme Aniogor - Forming future priests and leaders rooted in truth, holiness, and service.",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Ejeme Aniogor",
+      "addressCountry": "NG"
+    },
+    "sameAs": []
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "EducationalOrganization",
+    "name": "St. Felix Seminary School",
+    "url": "https://stfelixseminary.github.io/",
+    "image": "https://stfelixseminary.github.io/images/St Felix Logo.png",
+    "description": "Priestly formation and Catholic education institution",
+    "educationalCredentialAwarded": "Priestly Formation Certificate",
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "NG",
+      "addressLocality": "Ejeme Aniogor"
+    }
+  }
+  </script>
   
 </head>
 <body>
@@ -264,7 +297,7 @@
 
       <div class="patron-card">
         <div class="patron-image">
-          <img src="images/Mother of Perpetual Help.jpg" alt="Mother of Perpetual Help">
+          <img src="images/Mother of Perpetual Help.jpg" alt="Mother of Perpetual Help" loading="lazy">
           <div class="patron-overlay">
             <div class="patron-info">
               <h3>Mother of Perpetual Help</h3>
@@ -367,7 +400,7 @@
     <div class="patrons-grid">
       <div class="patron-card">
         <div class="patron-image">
-          <img src="images/Bishop Gbuji.png" alt="Bishop Anthony Gbuji - Founder" onerror="this.src='https://via.placeholder.com/400x500.png?text=Bishop+Anthony+Gbuji'">
+          <img src="images/Bishop Gbuji.png" alt="Bishop Anthony Gbuji - Founder" loading="lazy" onerror="this.src='https://via.placeholder.com/400x500.png?text=Bishop+Anthony+Gbuji'">
           <div class="patron-overlay">
             <div class="patron-info">
               <h3>Bishop Anthony Gbuji</h3>
@@ -387,15 +420,17 @@
 
       <div class="patron-card">
         <div class="patron-image">
-          <img src="images/Vicar General.jpg" alt="Vicar General of Issele Uku Diocese" onerror="this.src='https://via.placeholder.com/400x500.png?text=Vicar+General'">
+          <img src="images/Vicar General.jpg" alt="Vicar General of Issele Uku Diocese" loading="lazy" onerror="this.src='https://via.placeholder.com/400x500.png?text=Vicar+General'">
           <div class="patron-overlay">
             <div class="patron-info">
+              <p> Very Rev. Fr. Dr Mobogwu</p>
               <h3>Vicar General</h3>
               <p>Issele Uku Diocese</p>
             </div>
           </div>
         </div>
         <div class="patron-details">
+          <h4> Very Rev. Fr. Dr. Peter Mobogwu</h4>
           <h4>Vicar General</h4>
           <p>The Vicar General of Issele Uku Diocese provides spiritual guidance and administrative support to ensure the seminary continues to fulfill its mission of forming holy and dedicated priests.</p>
           <div class="patron-feast">
@@ -633,7 +668,7 @@
               
               <div class="rector-profile">
                 <div class="rector-image-placeholder">
-                  <img src="images/Rectors/Fr Callistus Eluchie.PNG" alt="Rev Fr. Callistus Eluchie - Pioneer Rector" />
+                  <img src="images/Rectors/Fr Callistus Eluchie.PNG" alt="Rev Fr. Callistus Eluchie - Pioneer Rector" loading="lazy" />
                 </div>
                 <div class="rector-details">
                   <h6>1. Rev Fr. Callistus Eluchie (1983-1986) - Pioneer Rector</h6>
@@ -647,7 +682,7 @@
 
               <div class="rector-profile">
                 <div class="rector-image-placeholder">
-                  <img src="images/Rectors/Fr Matthew Arinze.PNG" alt="Msgr. Matthew Arinze" />
+                  <img src="images/Rectors/Fr Matthew Arinze.PNG" alt="Msgr. Matthew Arinze" loading="lazy" />
                 </div>
                 <div class="rector-details">
                   <h6>2. Msgr. Matthew Arinze (1986-1990)</h6>
@@ -665,7 +700,7 @@
 
               <div class="rector-profile">
                 <div class="rector-image-placeholder">
-                  <img src="images/Rectors/Fr Simon Onyewadume.PNG" alt="Late Rev Fr Simon O. Onyewadume" />
+                  <img src="images/Rectors/Fr Simon Onyewadume.PNG" alt="Late Rev Fr Simon O. Onyewadume" loading="lazy" />
                 </div>
                 <div class="rector-details">
                   <h6>3. Late Rev Fr Simon O. Onyewadume (1990) - Acting Rector</h6>
@@ -681,7 +716,7 @@
 
               <div class="rector-profile">
                 <div class="rector-image-placeholder">
-                  <img src="images/Rectors/Fr Francis Ogabor.PNG" alt="Rev Fr Francis Ogagbor" />
+                  <img src="images/Rectors/Fr Francis Ogabor.PNG" alt="Rev Fr Francis Ogagbor" loading="lazy" />
                 </div>
                 <div class="rector-details">
                   <h6>4. Rev Fr Francis Ogagbor (1991-1993)</h6>
@@ -699,7 +734,7 @@
 
               <div class="rector-profile">
                 <div class="rector-image-placeholder">
-                  <img src="images/Rectors/Fr Michael Nwokolo.PNG" alt="Msgr. Michael Nwaokolo" />
+                  <img src="images/Rectors/Fr Michael Nwokolo.PNG" alt="Msgr. Michael Nwaokolo" loading="lazy" />
                 </div>
                 <div class="rector-details">
                   <h6>5. Msgr. Michael Nwaokolo (1994-1996)</h6>
@@ -715,7 +750,7 @@
 
               <div class="rector-profile">
                 <div class="rector-image-placeholder">
-                  <img src="images/Rectors/Fr Stephen Chukwuma.PNG" alt="Very Rev Fr Stephen Chukwumah" />
+                  <img src="images/Rectors/Fr Stephen Chukwuma.PNG" alt="Very Rev Fr Stephen Chukwumah" loading="lazy" />
                 </div>
                 <div class="rector-details">
                   <h6>6. Very Rev Fr Stephen Chukwumah (1996-1997)</h6>
