--- a/seminary-projects.html
+++ b/seminary-projects.html
@@ -17,7 +17,23 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
   />
-  <style>
+  <!-- Schema.org Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "name": "Seminary Projects - St. Felix Seminary School",
+    "url": "https://stfelixseminary.github.io/seminary-projects.html",
+    "description": "Seminary projects and development initiatives at St. Felix Seminary School",
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "St. Felix Seminary School",
+      "url": "https://stfelixseminary.github.io/"
+    }
+  }
+  </script>
+  
+</head>
     /* Projects Specific Styles */
     .projects-hero {
       background: linear-gradient(135deg, #002855 0%, #001a33 100%);
@@ -368,7 +384,7 @@
 
       <div class="project-card">
         <div class="project-image">
-          <img src="images/Project Photos/Landscaping.png" alt="Landscaping">
+          <img src="images/Project Photos/Landscaping.png" alt="Landscaping" loading="lazy">
           <div class="project-status status-ongoing">ONGOING</div>
         </div>
         <div class="project-content">
@@ -399,7 +415,7 @@
 
       <div class="project-card">
         <div class="project-image">
-          <img src="images/Project Photos/Proposed Chapel.png" alt="Proposed Chapel">
+          <img src="images/Project Photos/Proposed Chapel.png" alt="Proposed Chapel" loading="lazy">
           <div class="project-status status-ongoing">ONGOING</div>
         </div>
         <div class="project-content">
@@ -430,7 +446,7 @@
 
       <div class="project-card">
         <div class="project-image">
-          <img src="images/Project Photos/Proposed School Hall.PNG" alt="Proposed School Hall">
+          <img src="images/Project Photos/Proposed School Hall.PNG" alt="Proposed School Hall" loading="lazy">
           <div class="project-status status-ongoing">ONGOING</div>
         </div>
         <div class="project-content">
@@ -461,7 +477,7 @@
 
       <div class="project-card">
         <div class="project-image">
-          <img src="images/Project Photos/Proposed School Library.png" alt="Proposed School Library">
+          <img src="images/Project Photos/Proposed School Library.png" alt="Proposed School Library" loading="lazy">
           <div class="project-status status-ongoing">ONGOING</div>
         </div>
         <div class="project-content">
@@ -499,7 +515,7 @@
     <div class="projects-grid">
       <div class="project-card">
         <div class="project-image">
-          <img src="images/Completed hostel.jpg" alt="Completed Student Hostel">
+          <img src="images/Completed hostel.jpg" alt="Completed Student Hostel" loading="lazy">
           <div class="project-status status-completed">COMPLETED</div>
         </div>
         <div class="project-content">
@@ -523,7 +539,7 @@
 
       <div class="project-card">
         <div class="project-image">
-          <img src="images/gate house.jpg" alt="Gate House">
+          <img src="images/gate house.jpg" alt="Gate House" loading="lazy">
           <div class="project-status status-completed">COMPLETED</div>
         </div>
         <div class="project-content">
