Add favicon for browser tab

--- a/hall-of-fame.html
+++ b/hall-of-fame.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="images/St Felix Logo.png">
   <title>Hall of Fame | St. Felix Seminary School</title>
   <meta name="description" content="Celebrate the achievements of St. Felix Seminary School alumni. Meet our distinguished priests, bishops, and leaders making impact in their communities and the Church.">
   <meta name="keywords" content="Alumni, Hall of Fame, Priests, Bishops, Leaders, Seminary Graduates">
