--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="images/St Felix Logo.png">
   <title>St. Felix Seminary School, Ejeme Aniogor - Priestly Formation</title>
   <meta name="description" content="St. Felix Seminary School in Ejeme Aniogor - Forming future priests and leaders rooted in truth, holiness, and service. Learn about our history, programs, and alumni.">
   <meta name="keywords" content="Seminary, Priestly Formation, Catholic Education, Ejeme Aniogor, Diocese, Priests, Religious Education">
