--- a/news.html
+++ b/news.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="images/St Felix Logo.png">
   <title>News & Announcements | St. Felix Seminary School</title>
   <meta name="description" content="Latest news, announcements, and updates from St. Felix Seminary School, Ejeme Aniogor. Stay informed about seminary events and activities.">
   <meta name="keywords" content="News, Announcements, Seminary Updates, Events, Community">
