--- a/seminary-projects.html
+++ b/seminary-projects.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="images/St Felix Logo.png">
   <title>Seminary Projects | St. Felix Seminary School</title>
   <meta name="description" content="Support ongoing and planned projects at St. Felix Seminary School. View our completed projects and contribute to building our seminary community.">
   <meta name="keywords" content="Seminary Projects, Donations, Construction, Community Development, Support">
