--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="images/St Felix Logo.png">
   <title>Photo Gallery | St. Felix Seminary School</title>
   <meta name="description" content="Photo gallery showcasing events, celebrations, and moments from St. Felix Seminary School, Ejeme Aniogor. View our community activities and seminary life.">
   <meta name="keywords" content="Gallery, Seminary Photos, Events, Celebrations, Catholic Community">
